Removed shadows from slider border, for better integration. Updated position and opacity of prev/next buttons to remove jerkiness. Moved prev/next buttons to the bottom to avoid overlap with text (looks better since there is no box-shadow) Adjusted placement of pager. Made the page show only 4 slides max. Adjusted the body size to that so we center the body when the browser width is really big. Adjusted time labels, although I think there is more cleanup needed there. Made the phone size work as well.

--- a/app/assets/stylesheets/_shared.scss
+++ b/app/assets/stylesheets/_shared.scss
@@ -72,5 +72,7 @@ p {
     color: $contentTextColor;
     font-size: 14px;
     z-index: 1;
-    /*width: 90%;*/
+    max-width: 1120px;
+    margin-left: auto;
+    margin-right: auto;
 }
